// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser DOCTYPE 1`] = `
Object {
  "body": Array [],
  "childNodes": Array [
    Object {
      "end": 16,
      "endTag": null,
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 2,
        },
        "start": Object {
          "column": 1,
          "line": 2,
        },
      },
      "name": "html",
      "publicId": "",
      "range": Array [
        1,
        16,
      ],
      "start": 1,
      "startTag": null,
      "systemId": "",
      "type": "documentType",
    },
    Object {
      "attrs": Array [],
      "childNodes": Array [
        Object {
          "attrs": Array [],
          "end": 0,
          "endTag": null,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "namespaceURI": "http://www.w3.org/1999/xhtml",
          "range": Array [
            0,
            0,
          ],
          "start": 0,
          "startTag": null,
          "tagName": "head",
          "type": "Head",
        },
        Object {
          "attrs": Array [],
          "end": 0,
          "endTag": null,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "namespaceURI": "http://www.w3.org/1999/xhtml",
          "range": Array [
            0,
            0,
          ],
          "start": 0,
          "startTag": null,
          "tagName": "body",
          "type": "Body",
        },
      ],
      "end": 31,
      "endTag": Object {
        "end": 31,
        "loc": Object {
          "end": Object {
            "column": 8,
            "line": 4,
          },
          "start": Object {
            "column": 1,
            "line": 4,
          },
        },
        "range": Array [
          24,
          31,
        ],
        "start": 24,
      },
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 4,
        },
        "start": Object {
          "column": 1,
          "line": 3,
        },
      },
      "namespaceURI": "http://www.w3.org/1999/xhtml",
      "range": Array [
        17,
        31,
      ],
      "start": 17,
      "startTag": Object {
        "end": 23,
        "loc": Object {
          "end": Object {
            "column": 7,
            "line": 3,
          },
          "start": Object {
            "column": 1,
            "line": 3,
          },
        },
        "range": Array [
          17,
          23,
        ],
        "start": 17,
      },
      "tagName": "html",
      "type": "Html",
    },
  ],
  "comments": Array [],
  "end": 31,
  "endTag": null,
  "loc": Object {
    "end": Object {
      "column": 8,
      "line": 4,
    },
    "start": Object {
      "column": 1,
      "line": 2,
    },
  },
  "mode": "no-quirks",
  "range": Array [
    1,
    31,
  ],
  "start": 1,
  "startTag": null,
  "tokens": Array [],
  "type": "Program",
}
`;

exports[`parser base 1`] = `
Object {
  "body": Array [],
  "childNodes": Array [
    Object {
      "attrs": Array [],
      "childNodes": Array [
        Object {
          "attrs": Array [],
          "end": 0,
          "endTag": null,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "namespaceURI": "http://www.w3.org/1999/xhtml",
          "range": Array [
            0,
            0,
          ],
          "start": 0,
          "startTag": null,
          "tagName": "head",
          "type": "Head",
        },
        Object {
          "attrs": Array [],
          "end": 0,
          "endTag": null,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "namespaceURI": "http://www.w3.org/1999/xhtml",
          "range": Array [
            0,
            0,
          ],
          "start": 0,
          "startTag": null,
          "tagName": "body",
          "type": "Body",
        },
      ],
      "end": 15,
      "endTag": Object {
        "end": 15,
        "loc": Object {
          "end": Object {
            "column": 8,
            "line": 3,
          },
          "start": Object {
            "column": 1,
            "line": 3,
          },
        },
        "range": Array [
          8,
          15,
        ],
        "start": 8,
      },
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 3,
        },
        "start": Object {
          "column": 1,
          "line": 2,
        },
      },
      "namespaceURI": "http://www.w3.org/1999/xhtml",
      "range": Array [
        1,
        15,
      ],
      "start": 1,
      "startTag": Object {
        "end": 7,
        "loc": Object {
          "end": Object {
            "column": 7,
            "line": 2,
          },
          "start": Object {
            "column": 1,
            "line": 2,
          },
        },
        "range": Array [
          1,
          7,
        ],
        "start": 1,
      },
      "tagName": "html",
      "type": "Html",
    },
  ],
  "comments": Array [],
  "end": 15,
  "endTag": null,
  "loc": Object {
    "end": Object {
      "column": 8,
      "line": 3,
    },
    "start": Object {
      "column": 1,
      "line": 2,
    },
  },
  "mode": "quirks",
  "range": Array [
    1,
    15,
  ],
  "start": 1,
  "startTag": null,
  "tokens": Array [],
  "type": "Program",
}
`;
